# miku

./: .gitignore  LICENSE  README.md  miku-description.md  miku-ui-design-tokens.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  some-cool-stuff.md  stuff.md  vitest.config.ts
.github/workflows/: release.yml
docs/: APP_DISTRIBUTION_CHECKLIST.md  OASIS_SETUP_GUIDE.md  RFC-001-claude-code-cli-integration.md  rfc-mechanical-keyboard-sounds.md  rfc-simpledocs.md
docs/rfc/: RFC-001-highlight-management-v2.md
docs/rfcs/: RFC-001-SimpleKanban.md  RFC-001-theming-system.md
drizzle/: 0000_moaning_ikaris.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
examples/: example.miku  minimal.miku
landing/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
landing/.next/: prerender-manifest.json  trace
scripts/: version.js
src/: middleware.ts  proxy.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  claude_cli.rs  commands.rs  file_ops.rs  file_watcher.rs  lib.rs  main.rs  window_commands.rs  workspace.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AccountSection.tsx  AccountSectionContent.tsx  AgentChatEditor.tsx  AuthProvider.tsx  AutoSaveManager.tsx  BlockEditor.tsx  ClerkAuthBridge.tsx  ClerkButtons.tsx  (+18 more)
test-workspace/: CHANGELOG.md  README.md  api-reference.docs  ci-config.miku-env  development.miku-env  game-design.docs  playtesting.md  production.miku-env  roadmap.kanban  story-draft.docs  tech-notes.md
(+213 files in other folders)
